tests/baselines/reference/ES5For-ofTypeCheck13.errors.txt
ES5For-ofTypeCheck13.ts(4,19): error TS2802: Type 'Set<string>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


==== ES5For-ofTypeCheck13.ts (1 errors) ====
    const strSet: Set<string> = new Set()
    strSet.add('Hello')
    strSet.add('World')
    for (const str of strSet) { }
                      ~~~~~~
!!! error TS2802: Type 'Set<string>' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.